# timesol_retriever

./: .gitignore  Cargo.toml  README.md  build.rs  retriever.service  solgraph_retriever.service
.github/workflows/: rust_linter.yml
src/: aggregation.rs  api.rs  magiceden.rs  main.rs  utils.rs
src/api/: api_connection.rs
src/database/: db_connection.rs
src/magiceden/: parse.rs  requests.rs
src/utils/: config_reader.rs  parse.rs  pkg_info.rs
