[package]
name = "rust_learning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.78"
surf = "2.3.2"
futures = "0.3.21"
#postgres = "0.19.2"
tokio-postgres = { version="0.7.5", features=["with-chrono-0_4"] }
serde_yaml = "0.8.23"