[package]
name = "solgraph_retriever"
version = "0.1.0"
edition = "2021"
build = "build.rs"
authors = ["Zenito Pires <zenitopires@gmail.com>"]
repository = "https://github.com/zenitopires/solgraph_backend"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.78"
surf = "2.3.2"
futures = "0.3.21"
tokio-postgres = { version="0.7.5", features=["with-chrono-0_4"] }
serde_yaml = "0.8.23"
tracing = "0.1.31"
tracing-appender = "0.2.1"
tracing-subscriber = "0.3.9"
log = "0.4.14"
env_logger = "0.9.0"
built = {version = "0.5.1" }

[build-dependencies]
built = {version = "0.5.1" }